:cry: :cry: :cry:
сделай ты уже крутой avx xor друг

--- a/wok-csgo/wok-csgo.vcxproj
+++ b/wok-csgo/wok-csgo.vcxproj
@@ -95,6 +95,7 @@
       <ConformanceMode>false</ConformanceMode>
       <PrecompiledHeaderFile />
       <LanguageStandard>stdcpplatest</LanguageStandard>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
       <SubSystem>
