little bit changed bode style, added cool vfuncs)))

--- a/wok-csgo/wok-csgo.vcxproj.filters
+++ b/wok-csgo/wok-csgo.vcxproj.filters
@@ -106,7 +106,7 @@
     <ClCompile Include="utils\memory\memory.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="sdk\misc.cpp">
+    <ClCompile Include="sdk\sdk.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
